active heladeria turron buga y agregue el content visibility a la clase caja negocio de el archivo estilo css

--- a/estilo.css
+++ b/estilo.css
@@ -285,6 +285,7 @@ a p:hover {
     width: 100%;
     border-radius: 10px;
     margin-bottom: 12px;
+    content-visibility: auto;
 }
 
 .tituloYDescripcion {
